--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -44,9 +44,6 @@
     padding: 10px 10px 0 0;
     position: relative;
   }
-  .dates {
-    border-bottom: 1px @borderGray solid;
-  }
   .price {
     background: white;
     bottom: 100%;
@@ -103,6 +100,7 @@
 
 .SessionList {
   .session {
+    margin: 10px 10px 20px;
     position: relative;
     .RsvpLink, .EnrollLink {
       text-align: center;
