--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -1,5 +1,4 @@
 {% if session.course.fee %}
-<div class="price">$<script>document.write({{ member_discount }}*{{ session.course.fee }})</script></div>
 <div class="EnrollLink">
   {% if session.closed %}
   <button class="btn btn-default disabled">{{ session.closed_string|title }}</button>
@@ -7,7 +6,8 @@
   <button class="btn btn-default disabled">FULL</button>
   {% else %}
   <button class="btn btn-primary add" onclick="addClass({{ session.id }});">
-    {% if session.in_progress %}In Progress{% else %}Enroll{% endif %}</button>
+    {% if session.in_progress %}In Progress{% else %}Enroll{% endif %} - 
+    $<script>document.write({{ member_discount }}*{{ session.course.fee }})</script></button>
   <button class="btn btn-danger drop" onclick="simpleCart.remove('{{ session.id }}'); toggleCourses();">
     Drop</button>
   {% endif %}
