evaluations can now be anonymous

--- a/course/templates/course/evaluation_form.html
+++ b/course/templates/course/evaluation_form.html
@@ -36,6 +36,6 @@
   <hr />
   {% endif %}
   {% endfor %}
-  <input type="submit" />
+  <input type="submit" class="btn btn-primary" />
 </form>
 {% endblock %}
