playing with an alternate way to display full classes

--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -6,7 +6,7 @@
       <img src="{{ course.im.url }}" width="{{ course.im.width }}" height="{{ course.im.height }}" />
     </a>
     <div class="details">
-      <a href="{{ couse.url }}" class="title">
+      <a href="{{ course.url }}" class="title">
         {{ course.name }}
         <div class="price">{{ course.fee }}</div>
       </a>
