--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -2,6 +2,7 @@
 section { padding-bottom: 25px; }
 section.banner { padding-bottom: 35px; }
 .comment:target > .comment_outer { background-color: @successBackground; }
+[ng-cloak] { display: none; }
 
 .transition(@value) {
   transition: @value;
