--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -1,24 +1,72 @@
 @cartWidth: 100px;
-@pictureWidth: 150px;
+@pictureWidth: 206px;
 
 .course {
-  min-height: 112px;
+  color: inherit;
+  display: block;
+  max-height: 153px;
   overflow: hidden;
   position: relative;
   width: 100%;
+  &:hover .title { text-decoration: underline; }
+  &.enrolled { background: #A9CEE0; }
+}
+
+.course { // layout the two boxes
+  .picture {
+    left: 5px;
+    position: absolute;
+    top: 5px;
+    width: 206px;
+    img {
+      height: auto;
+      width: 100%;
+    }
+  }
+  .details {
+    min-height: 140px;
+    padding-left: @pictureWidth + 10px;
+  }
+}
+
+@media (max-width: @screen-xs-max) {
+  .course {
+    max-height: none;
+    .picture, .details {
+      float: left;
+      position: static;
+      width: 50%;
+    }
+    .details { padding-left: 10px; }
+  }
 }
 
 .course .picture {
-  left: 5px;
-  position: absolute;
-  top: 5px;
-  width: @pictureWidth;
-  z-index: 1;
-  img { height: auto; }
+  .price {
+    background: white;
+    color: black;
+    font-size: 1.2em;
+    left: 0;
+    margin: 5px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 60px;
+    z-index: 1;
+    &:before { content: "$"; }
+    &:empty { display: none; }
+  }
+  .enrolled-status {
+    background: @brand-success;
+    bottom: 0;
+    color: white;
+    font-weight: bold;
+    padding: 5px 10px;
+    position: absolute;
+  }
 }
 
 .course .details {
-  min-height: 72px;
   .closed_string {
     color: red;
     text-transform: uppercase;
@@ -26,33 +74,20 @@
     &:after { content: "]"; }
     &:empty { display: none; }
   }
-  .price {
-    color: black;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    width: 70px;
-    z-index: 1;
-    &:before { content: "$"; }
-    &:empty { display: none; }
-  }
   .title {
+    color: @brand-primary;
     display: block;
     font-size: 18px;
+    font-weight: bold;
     line-height: 1.2em;
-    min-height: 41px;
-    padding: 10px 10px 0 0;
+    padding: 0 0 10px 0;
     position: relative;
   }
-  .price {
-    background: white;
-    bottom: 100%;
-    color: black;
-    position: absolute;
-    right: 0;
-    text-align: center;
-    width: 65px;
+  .sessions {
+    margin: 0;
+    padding: 0 0 10px 20px;
   }
+  //the rest of this is probably depracated
   .bottom {
     line-height: 1;
     margin-bottom: -2px;
@@ -77,24 +112,6 @@
       ~ label { &:before { content: "Hide"; } }
       ~ .session { display: block; }
     }
-  }
-}
-.course {
-  .picture {
-    height: auto;
-    min-height: 110px;
-    padding: 0 105px 10px 0;
-    position: static;
-    width: 100%;
-    img {
-      width: 100%;
-      height: auto;
-    }
-  }
-  .CartBox {
-    position: absolute;
-    top: 20px;
-    right: 5px;
   }
 }
 
@@ -159,17 +176,8 @@
   }
 }
 
-.course .CartBox {
-  float: right;
-}
 .course-detail {
   .subjects { padding-bottom: 5px; }
-  .CartBox {
-    position: absolute;
-    right: @grid-gutter-width/2;
-    top: 0;
-    z-index: 1;
-  }
 }
 
 #cart {
