--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -14,6 +14,7 @@
       var _NOTIFY_URL = "https://txrxlabs.org/tx/rx/ipn/handler/"
       {% endif %}
       var _USER_NUMBER = "{{ request.user.pk }}";
+      var MEMBER_DISCOUNT = {{ member_discount }};
     </script>
     
     <link rel="shortcut icon" href="/favicon.ico" />
