--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -144,7 +144,7 @@ form.filters { margin-bottom: 10px; }
     text-align: left;
     width: 100%;
   }
-  input:checked + label { font-weight: bold; }
+  input:checked ~ label { font-weight: bold; }
   .child { display:none; }
   input:checked ~ .child { display: block; }
 }
